--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
   <header>
     <h1>Group 1 Metals</h1>
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="learning.html">Learning</a></li>
-        <li><a href="social.html">Social</a></li>
-      </ul>
+      <a href="index.html">Home</a>
+      <a href="learning.html">Learning</a>
+      <a href="social.html">Social</a>
     </nav>
   </header>
 
   <main>
-    <h2>Welcome</h2>
-    <p>This is the homepage for Group 1 metals. Explore the learning and social sections to know more.</p>
+    <h2>Welcome!</h2>
+    <p>This website explores the fascinating properties of Group 1 metals.</p>
   </main>
 
   <footer>
