--- a/learning.html
+++ b/learning.html
@@ -8,28 +8,17 @@
 </head>
 <body>
   <header>
-    <h1>Learning Hub</h1>
+    <h1>Group 1 Metals</h1>
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="learning.html" class="active">Learning</a></li>
-        <li><a href="social.html">Social</a></li>
-      </ul>
+      <a href="index.html">Home</a>
+      <a href="learning.html">Learning</a>
+      <a href="social.html">Social</a>
     </nav>
   </header>
 
   <main>
-    <h2>Educational Content</h2>
-    <p>Here you will find notes, simulations, and quizzes about Group 1 metals (Alkali Metals).</p>
-    <section>
-      <h3>Topics</h3>
-      <ul>
-        <li>Physical Properties</li>
-        <li>Chemical Properties</li>
-        <li>Reactivity Trends</li>
-        <li>Everyday Uses</li>
-      </ul>
-    </section>
+    <h2>Learning Resources</h2>
+    <p>Here you’ll find interactive simulations, explanations, and resources to understand Group 1 metals better.</p>
   </main>
 
   <footer>
