--- a/social.html
+++ b/social.html
@@ -8,33 +8,17 @@
 </head>
 <body>
   <header>
-    <h1>Social Hub</h1>
+    <h1>Group 1 Metals</h1>
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="learning.html">Learning</a></li>
-        <li><a href="social.html" class="active">Social</a></li>
-      </ul>
+      <a href="index.html">Home</a>
+      <a href="learning.html">Learning</a>
+      <a href="social.html">Social</a>
     </nav>
   </header>
 
   <main>
-    <h2>Community & Sharing</h2>
-    <p>Connect with others who are studying Group 1 metals. Share your findings and ideas.</p>
-
-    <section>
-      <h3>Discussion Board</h3>
-      <p>(This could later be linked to a live forum or form submission system.)</p>
-    </section>
-
-    <section>
-      <h3>Student Projects</h3>
-      <ul>
-        <li>Reaction Experiment Journals</li>
-        <li>Interactive Simulations</li>
-        <li>Creative Presentations</li>
-      </ul>
-    </section>
+    <h2>Community & Discussions</h2>
+    <p>Connect with other learners, share your knowledge, and discuss Group 1 metals.</p>
   </main>
 
   <footer>
