--- a/social.html
+++ b/social.html
@@ -8,17 +8,35 @@
 </head>
 <body>
   <header>
-    <h1>Group 1 Metals</h1>
+    <h1>Group 1 Metals — Social Impact</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="learning.html">Learning</a>
-      <a href="social.html">Social</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="learning.html">Learning</a></li>
+        <li><a href="social.html">Social</a></li>
+      </ul>
     </nav>
   </header>
 
   <main>
-    <h2>Community & Discussions</h2>
-    <p>Connect with other learners, share your knowledge, and discuss Group 1 metals.</p>
+    <section>
+      <h2>Societal Importance</h2>
+      <p>Group 1 metals (alkali metals) play a critical role in industries and modern society. From lithium in rechargeable batteries to sodium in glassmaking and medicine, these elements impact daily life in ways we often overlook.</p>
+    </section>
+
+    <section>
+      <h2>Applications in Society</h2>
+      <ul>
+        <li><strong>Lithium:</strong> Vital in electric vehicle batteries and portable electronics.</li>
+        <li><strong>Sodium:</strong> Used in medicine, street lighting, and industrial processes.</li>
+        <li><strong>Potassium:</strong> Essential nutrient for agriculture and fertilizers.</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Environmental Considerations</h2>
+      <p>The extraction and use of alkali metals can have environmental consequences, such as mining impacts and waste disposal. Responsible management is crucial to balance innovation with sustainability.</p>
+    </section>
   </main>
 
   <footer>
