--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Group 1 Metals (Alkali Metals) — Home</title>
-  <meta name="description" content="A polished Y10–11 learning site about Group 1 (alkali) metals: properties, trends, reactions, uses, and exam prep." />
-  <link rel="stylesheet" href="styles.css" />
+  <title>Group 1 Metals — Home</title>
+  <meta name="description" content="Y10–11 teaching site for Group 1 (alkali) metals with interactive animations and exam prep." />
+  <link rel="stylesheet" href="styles.css">
+  <!-- GSAP for advanced animations -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" defer></script>
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
@@ -16,13 +19,13 @@
         <div class="logo">G1</div>
         <div class="brand-text">
           <h1>Group 1 Metals</h1>
-          <p class="tagline">Alkali Metals — Y10–11 Complete Guide</p>
+          <p class="tagline">Complete Y10–11 — interactive animations & exam prep</p>
         </div>
       </div>
-      <button class="nav-toggle" aria-controls="nav" aria-expanded="false" id="navToggle" title="Toggle navigation">
-        ☰
-      </button>
-      <nav id="nav" class="site-nav" aria-label="Primary">
+
+      <button class="nav-toggle" id="navToggle" aria-controls="nav" aria-expanded="false">☰</button>
+
+      <nav id="nav" class="site-nav" aria-label="Primary navigation">
         <a href="index.html" class="active">Home</a>
         <a href="learning.html">Learning Hub</a>
         <a href="social.html">Community</a>
@@ -31,66 +34,55 @@
   </header>
 
   <main id="main">
-    <section class="hero">
-      <div class="container hero-inner">
-        <div class="hero-copy">
-          <h2>Master the Alkali Metals</h2>
-          <p>
-            From <strong>Lithium</strong> to <strong>Francium</strong>, understand periodic trends, reactions,
-            practical uses, hazards, and exam strategies — everything aligned for Years 10–11.
-          </p>
-          <div class="cta-row">
-            <a class="btn primary" href="learning.html">Start Learning</a>
-            <a class="btn outline" href="social.html">Join the Community</a>
-          </div>
+    <section class="hero container">
+      <div class="hero-copy">
+        <h2>Master the Alkali Metals</h2>
+        <p>Interactive notes, chemical properties, animated reaction demos and exam-style practice — built for Year 10–11 students.</p>
+        <div class="cta-row">
+          <a class="btn primary" href="learning.html">Start Learning</a>
+          <a class="btn outline" href="social.html">Join Community</a>
         </div>
-        <div class="hero-card" role="img" aria-label="Periodic table highlight of Group 1 metals">
-          <div class="pt-row">
-            <span class="pt-cell g1">Li</span>
-            <span class="pt-cell g1">Na</span>
-            <span class="pt-cell g1">K</span>
-            <span class="pt-cell g1">Rb</span>
-            <span class="pt-cell g1">Cs</span>
-            <span class="pt-cell g1">Fr</span>
-          </div>
-          <p class="hero-note">Group 1 (Alkali) — highly reactive, softness increases and density generally increases down the group.</p>
+      </div>
+      <div class="hero-visual" aria-hidden="true">
+        <div class="pt-row">
+          <div class="pt-cell g1">Li</div>
+          <div class="pt-cell g1">Na</div>
+          <div class="pt-cell g1">K</div>
+          <div class="pt-cell g1">Rb</div>
+          <div class="pt-cell g1">Cs</div>
+          <div class="pt-cell g1">Fr</div>
         </div>
+        <p class="hero-note">Group 1 — very reactive metals, valence = 1, produce M⁺ ions.</p>
       </div>
     </section>
 
-    <section class="cards container">
+    <section class="container cards">
       <article class="card">
-        <h3>Curriculum Ready</h3>
-        <p>Clear explanations, annotated equations, worked examples, and end-of-topic questions mapped to Y10–11 expectations.</p>
+        <h3>Curriculum-ready</h3>
+        <p>Clear learning modules mapped to Y10–11 objectives: properties, chemical behaviour, equations and exam technique.</p>
       </article>
       <article class="card">
-        <h3>Interactive Checks</h3>
-        <p>Quick quizzes and self-marking exercises to test recall, application, and exam technique.</p>
+        <h3>Rich Animations</h3>
+        <p>Interactive reaction simulations (Na + H₂O, Li + O₂, K flame, Na + Cl₂) using SVG/canvas + GSAP for memory-friendly visualisation.</p>
       </article>
       <article class="card">
-        <h3>Practical Focus</h3>
-        <p>Safety, method outlines, and analysis of classic reactions (e.g., sodium + water) with observations and equations.</p>
+        <h3>Practice & Assessment</h3>
+        <p>Auto-marked quick quizzes, worked examples and exam-style questions with model answers.</p>
       </article>
     </section>
 
-    <section class="container two-col">
+    <section class="container two-col intro">
       <div>
-        <h3>What You’ll Learn</h3>
-        <ul class="tick">
-          <li>Electronic structure and periodic trends</li>
-          <li>Reactions with water, oxygen, and halogens</li>
-          <li>Observations, word & symbol equations, state symbols</li>
-          <li>Flame tests, uses, hazards, and storage</li>
-          <li>Exam tips, misconceptions, and practice questions</li>
-        </ul>
+        <h3>Why animations?</h3>
+        <p>Visual motion and cause-effect (e.g., a sodium piece fizzing and producing hydrogen) make it easier for students to remember observations and link them to balanced equations.</p>
       </div>
       <div class="panel">
-        <h4>Quick Facts</h4>
+        <h4>Quick facts</h4>
         <ul class="bullets">
           <li>Valence electrons: <strong>1</strong></li>
-          <li>Form ions: <strong>M⁺</strong></li>
-          <li>Trend: Reactivity <strong>increases</strong> down the group</li>
-          <li>Soft, low density (Li, Na, K float), low melting points for metals</li>
+          <li>Typical ion: <strong>M⁺</strong></li>
+          <li>Reactivity: <strong>increases down the group</strong></li>
+          <li>Hydroxides: strong alkalis (MOH)</li>
         </ul>
       </div>
     </section>
@@ -99,7 +91,7 @@
   <footer class="site-footer">
     <div class="container footer-inner">
       <p>&copy; 2025 Group 1 Metals — Y10–11</p>
-      <nav aria-label="Footer">
+      <nav aria-label="Footer navigation">
         <a href="index.html">Home</a>
         <a href="learning.html">Learning Hub</a>
         <a href="social.html">Community</a>
@@ -107,6 +99,6 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
