--- a/social.html
+++ b/social.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Community — Group 1 Metals</title>
-  <meta name="description" content="Discuss, share resources, and collaborate on Group 1 metals. Safe guidelines and starter prompts included." />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
@@ -19,10 +19,10 @@
           <p class="tagline">Community</p>
         </div>
       </div>
-      <button class="nav-toggle" aria-controls="nav" aria-expanded="false" id="navToggle" title="Toggle navigation">
-        ☰
-      </button>
-      <nav id="nav" class="site-nav" aria-label="Primary">
+
+      <button class="nav-toggle" id="navToggle" aria-controls="nav" aria-expanded="false">☰</button>
+
+      <nav id="nav" class="site-nav" aria-label="Primary navigation">
         <a href="index.html">Home</a>
         <a href="learning.html">Learning Hub</a>
         <a href="social.html" class="active">Community</a>
@@ -33,50 +33,41 @@
   <main id="main" class="container">
     <section class="two-col">
       <div>
-        <h2>Discussion Board (Starter Prompts)</h2>
+        <h2>Discussion Starter Prompts</h2>
         <ul class="bullets">
-          <li>Share observations from a safe demonstration of sodium in water.</li>
-          <li>Explain why potassium shows a lilac flame, linking to electron transitions.</li>
-          <li>Debate: Which is more impactful in daily life — sodium or potassium? Why?</li>
+          <li>Share safe classroom observations for sodium + water.</li>
+          <li>Explain why potassium flame is lilac — connect to electron transitions.</li>
+          <li>Discuss environmental impacts of lithium mining and battery recycling.</li>
         </ul>
-        <p class="muted">Tip: Keep posts respectful, cite sources where appropriate, and never recommend unsafe experiments.</p>
       </div>
-      <form class="panel" id="postForm">
-        <h3>Post a Comment</h3>
-        <label class="field">
-          <span>Name</span>
-          <input type="text" id="postName" placeholder="Your name" required />
-        </label>
-        <label class="field">
-          <span>Comment</span>
-          <textarea id="postText" placeholder="Your comment" rows="5" required></textarea>
-        </label>
-        <button type="submit" class="btn primary">Publish</button>
+
+      <form id="postForm" class="panel">
+        <h3>Post a comment</h3>
+        <label class="field"><span>Name</span><input id="postName" type="text" placeholder="Your name" required></label>
+        <label class="field"><span>Comment</span><textarea id="postText" rows="4" placeholder="Share your thought..." required></textarea></label>
+        <button class="btn primary" type="submit">Publish</button>
         <p id="postInfo" class="muted" aria-live="polite"></p>
       </form>
     </section>
 
     <section class="content-card">
-      <h3>Recent Posts</h3>
-      <ul id="posts" class="posts">
-        <!-- JS will inject posts here -->
-      </ul>
+      <h3>Recent posts</h3>
+      <ul id="posts" class="posts"></ul>
     </section>
 
     <section class="content-card">
-      <h3>Community Guidelines</h3>
+      <h3>Community rules</h3>
       <ul class="tick">
         <li>Be respectful and constructive.</li>
-        <li>No unsafe advice; follow school/lab safety rules.</li>
-        <li>Use plain English and support claims with evidence.</li>
-        <li>Protect privacy; no personal data in posts.</li>
+        <li>No unsafe experimental advice.</li>
+        <li>Protect privacy — no personal contact details in posts.</li>
       </ul>
     </section>
   </main>
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>&copy; 2025 Group 1 Metals — Y10–11</p>
+      <p>&copy; 2025 Group 1 Metals</p>
       <nav aria-label="Footer">
         <a href="index.html">Home</a>
         <a href="learning.html">Learning Hub</a>
@@ -85,6 +76,6 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
