--- a/index.html
+++ b/index.html
@@ -1,104 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Group 1 Metals — Home</title>
-  <meta name="description" content="Y10–11 teaching site for Group 1 (alkali) metals with interactive animations and exam prep." />
-  <link rel="stylesheet" href="styles.css">
-  <!-- GSAP for advanced animations -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Precision Education - Year 10 Periodic Table</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <a class="skip-link" href="#main">Skip to content</a>
-
-  <header class="site-header">
-    <div class="container header-inner">
-      <div class="brand">
-        <div class="logo">G1</div>
-        <div class="brand-text">
-          <h1>Group 1 Metals</h1>
-          <p class="tagline">Complete Y10–11 — interactive animations & exam prep</p>
-        </div>
-      </div>
-
-      <button class="nav-toggle" id="navToggle" aria-controls="nav" aria-expanded="false">☰</button>
-
-      <nav id="nav" class="site-nav" aria-label="Primary navigation">
-        <a href="index.html" class="active">Home</a>
-        <a href="learning.html">Learning Hub</a>
-        <a href="social.html">Community</a>
-      </nav>
-    </div>
+  <header>
+    <h1>Precision Education - Year 10</h1>
+    <p>Interactive Periodic Table</p>
   </header>
 
-  <main id="main">
-    <section class="hero container">
-      <div class="hero-copy">
-        <h2>Master the Alkali Metals</h2>
-        <p>Interactive notes, chemical properties, animated reaction demos and exam-style practice — built for Year 10–11 students.</p>
-        <div class="cta-row">
-          <a class="btn primary" href="learning.html">Start Learning</a>
-          <a class="btn outline" href="social.html">Join Community</a>
-        </div>
-      </div>
-      <div class="hero-visual" aria-hidden="true">
-        <div class="pt-row">
-          <div class="pt-cell g1">Li</div>
-          <div class="pt-cell g1">Na</div>
-          <div class="pt-cell g1">K</div>
-          <div class="pt-cell g1">Rb</div>
-          <div class="pt-cell g1">Cs</div>
-          <div class="pt-cell g1">Fr</div>
-        </div>
-        <p class="hero-note">Group 1 — very reactive metals, valence = 1, produce M⁺ ions.</p>
-      </div>
-    </section>
-
-    <section class="container cards">
-      <article class="card">
-        <h3>Curriculum-ready</h3>
-        <p>Clear learning modules mapped to Y10–11 objectives: properties, chemical behaviour, equations and exam technique.</p>
-      </article>
-      <article class="card">
-        <h3>Rich Animations</h3>
-        <p>Interactive reaction simulations (Na + H₂O, Li + O₂, K flame, Na + Cl₂) using SVG/canvas + GSAP for memory-friendly visualisation.</p>
-      </article>
-      <article class="card">
-        <h3>Practice & Assessment</h3>
-        <p>Auto-marked quick quizzes, worked examples and exam-style questions with model answers.</p>
-      </article>
-    </section>
-
-    <section class="container two-col intro">
-      <div>
-        <h3>Why animations?</h3>
-        <p>Visual motion and cause-effect (e.g., a sodium piece fizzing and producing hydrogen) make it easier for students to remember observations and link them to balanced equations.</p>
-      </div>
-      <div class="panel">
-        <h4>Quick facts</h4>
-        <ul class="bullets">
-          <li>Valence electrons: <strong>1</strong></li>
-          <li>Typical ion: <strong>M⁺</strong></li>
-          <li>Reactivity: <strong>increases down the group</strong></li>
-          <li>Hydroxides: strong alkalis (MOH)</li>
-        </ul>
-      </div>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="container footer-inner">
-      <p>&copy; 2025 Group 1 Metals — Y10–11</p>
-      <nav aria-label="Footer navigation">
-        <a href="index.html">Home</a>
-        <a href="learning.html">Learning Hub</a>
-        <a href="social.html">Community</a>
-      </nav>
+  <!-- Periodic Table -->
+  <section class="periodic-table">
+    <h2>Full Periodic Table</h2>
+    <div class="table-grid">
+      <!-- Only showing Group 1 here, rest would be filled out -->
+      <button class="element alkali" onclick="location.href='group1.html'">
+        H<br><span>Hydrogen</span>
+      </button>
+      <button class="element alkali" onclick="location.href='group1.html'">
+        Li<br><span>Lithium</span>
+      </button>
+      <button class="element alkali" onclick="location.href='group1.html'">
+        Na<br><span>Sodium</span>
+      </button>
+      <button class="element alkali" onclick="location.href='group1.html'">
+        K<br><span>Potassium</span>
+      </button>
+      <button class="element alkali" onclick="location.href='group1.html'">
+        Rb<br><span>Rubidium</span>
+      </button>
+      <button class="element alkali" onclick="location.href='group1.html'">
+        Cs<br><span>Caesium</span>
+      </button>
+      <button class="element alkali" onclick="location.href='group1.html'">
+        Fr<br><span>Francium</span>
+      </button>
     </div>
-  </footer>
+  </section>
 
-  <script src="script.js" defer></script>
+  <!-- Facebook -->
+  <footer>
+    <h2>Connect With Us</h2>
+    <div class="fb-page" data-href="https://www.facebook.com/" data-tabs="timeline"
+         data-width="" data-height="" data-small-header="false"
+         data-adapt-container-width="true" data-hide-cover="false"
+         data-show-facepile="true">
+    </div>
+
+    <!-- Feedback Form -->
+    <h2>Feedback Form</h2>
+    <form action="https://formspree.io/f/yourformid" method="POST">
+      <label for="name">Name:</label>
+      <input type="text" name="name" required>
+      <label for="feedback">Your Feedback:</label>
+      <textarea name="feedback" required></textarea>
+      <button type="submit">Submit</button>
+    </form>
+  </footer>
 </body>
 </html>
